[package]
name = "actionkv"
version = "0.1.0"
authors = ["Emirhan Tala <emirhantala99ff99@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1"
byteorder = "1.4.3"
crc = "1"
serde = "1.0.164"
serde_derive = "1.0.164"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"